# llm_integration_api

./: .gitignore  README.md  pyproject.toml
llm_integration_api/: client.py  exceptions.py  response.py
llm_integration_api/interface/: client.py  message.py  response.py
llm_integration_api/interface/tests/: test_client.py  test_exceptions.py  test_message.py  test_response.py
llm_integration_api/open_router_impl/: open_router_client.py  open_router_message.py  open_router_response.py
llm_integration_api/open_router_impl/tests/: test_open_router_client.py  test_open_router_message.py  test_open_router_response.py
llm_integration_api/tests/: test_client.py  test_exceptions.py  test_message.py  test_response.py
scripts/: explore_model.py  test_api_key.py
